# business-analytics-ai

./: .pylintrc  COMPLETE_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOY_NOW.md  DOCKER_DEPLOYMENT.md  EVALUATION_REPORT.md  INTEGRATION_GUIDE.md  INTEGRATION_REPORT.md  INTEGRATION_SETUP.md  INTEGRATION_VERIFICATION.md  INTEGRATION_VISUAL_SUMMARY.md  LICENSE  PLATFORM_OVERVIEW.md  PUBLICATION_CHECKLIST.md  QUICK_REFERENCE.md  RAILWAY_DEPLOYMENT.md  RAILWAY_QUICK_START.md  RAILWAY_START_HERE.md  README.md  READY_TO_PUBLISH.md  STEP_BY_STEP_GITHUB.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  deploy-docker.bat  deploy-docker.sh  deploy-railway.bat  docker-compose.yml  integration_test.py  pyproject.toml  pyrightconfig.json  railway.toml  sample_data.csv  start_backend.bat  start_backend.sh  start_frontend.bat  start_frontend.sh  verify-deployment.bat
backend/: .env.example  Dockerfile  main.py  requirements.txt
backend/app/: __init__.py
backend/app/api/: analytics_routes.py
backend/app/core/: __init__.py  config.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: analytics_engine.py  csv_handler.py  insight_generator.py
backend/app/utils/: logger.py
frontend/: .env.example  Dockerfile  package.json
frontend/src/: App.js  index.css
frontend/src/components/layout/: Sidebar.js
frontend/src/components/shared/: InsightCard.js  KpiCard.js
frontend/src/lib/: api.js
frontend/src/pages/: Analytics.js  Dashboard.js  DataManagement.js  DecisionSupport.js  Reports.js
